force-app/main/default/objects/Service_Location__c/Service_Location__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Service Location</label>
    <nameField>
        <label>Service Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>