force-app/main/default/objects/Service_Location__c/fields/DUNS_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Update_Date__c</fullName>
    <label>DUNS Update Date</label>
    <type>Date</type>
</CustomField>