force-app/main/default/objects/Service_Location__c/fields/IM_Country__c.field-meta.xml
<CustomField>
    <fullName>IM_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>IM_Country__c</referenceTo>
    <relationshipLabel>Service Locations</relationshipLabel>
    <relationshipName>Service_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>