force-app/main/default/objects/Service_Location__c/fields/IM_Country_name__c.field-meta.xml
<CustomField>
    <fullName>IM_Country_name__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>