force-app/main/default/objects/Service_Location__c/fields/IM_County_Name__c.field-meta.xml
<CustomField>
    <fullName>IM_County_Name__c</fullName>
    <label>County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>