force-app/main/default/objects/Service_Location__c/fields/IM_service_location_id__c.field-meta.xml
<CustomField>
    <fullName>IM_service_location_id__c</fullName>
    <externalId>true</externalId>
    <label>EDW Location Id</label>
    <length>22</length>
    <type>Text</type>
</CustomField>