force-app/main/default/objects/Service_Location__c/fields/Owning_District_Id__c.field-meta.xml
<CustomField>
    <fullName>Owning_District_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owning District Id</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Service Locations</relationshipLabel>
    <relationshipName>Service_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>