force-app/main/default/objects/Service_Location__c/fields/QTB_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#Gitlab-773 To store the Billing Account information.</description>
    <label>Billing Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Billing Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Locations</relationshipLabel>
    <relationshipName>Service_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>