force-app/main/default/objects/Service_Location__c/fields/QTB_Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_Inactive_Date__c</fullName>
    <description>Gitlab #1329 Inactive date is to end date service location records in operational system</description>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>