force-app/main/default/objects/Service_Location__c/fields/QTB_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Site_Number__c</fullName>
    <description>Gitlab #1067 After data load to update the Site Number field to match source system</description>
    <label>Site Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>