force-app/main/default/objects/Service_Location__c/fields/QTB_SiteID__c.field-meta.xml
<CustomField>
    <fullName>QTB_SiteID__c</fullName>
    <label>SiteID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>