force-app/main/default/objects/Service_Location__c/fields/State_Province_name__c.field-meta.xml
<CustomField>
    <fullName>State_Province_name__c</fullName>
    <label>State Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>