force-app/main/default/objects/Service_Location__c/fields/Svc_District_Id__c.field-meta.xml
<CustomField>
    <fullName>Svc_District_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicing District</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Service Locations (Svc. District Id)</relationshipLabel>
    <relationshipName>Service_Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>