force-app/main/default/objects/Service_Location__c/fields/Svc_District_Name__c.field-meta.xml
<CustomField>
    <fullName>Svc_District_Name__c</fullName>
    <formula>Svc_District_Id__r.District_NAME__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Svc. District Name</label>
    <type>Text</type>
</CustomField>