force-app/main/default/objects/Service_Location__c/validationRules/QTB_Characters_Limit_to_50.validationRule-meta.xml
<ValidationRule>
    <fullName>QTB_Characters_Limit_to_50</fullName>
    <active>true</active>
    <description>Service location name cannot be more than 50 Characters.</description>
    <errorConditionFormula>AND(NOT($Setup.Metadata_Activation_Settings__c.Disable_VR__c &amp;&amp;
OR(ISBLANK($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c),CONTAINS($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c,&apos;Service_Location__c&apos;))), LEN( Name ) &gt; 50 )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Service location name cannot  be more than 50 Characters</errorMessage>
</ValidationRule>